# exercise7

./: .gitignore  CMakeLists.txt  README.md  main.ipynb  task1.main.cpp  task2.hpp  task2.test.cpp  task3.concept.hpp  task3.hpp  task3.test.cpp
.iue/: .expected-files
